--- a/OnPaceRaceAdmin.Web/Views/_ViewImports.cshtml
+++ b/OnPaceRaceAdmin.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using OnPaceRaceAdmin.Web
-@using OnPaceRaceAdmin.Web.Models
+﻿@using OnPaceRaceAdmin.Web;
+@using OnPaceRaceAdmin.Web.Models;
+@using  Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
